--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
     "lint": "npx eslint src",
-    "lint:fix": "npm run lint --fix",
+    "lint:fix": "npm run lint -- --fix",
     "prettier": "npx prettier src --check",
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run prettier:fix && npm run lint:fix"
